--- a/TEK.css
+++ b/TEK.css
@@ -8,15 +8,16 @@
 
 
 h2 {
-    font-size: 24px;
+    font-size: 32px;
+    font-family: 'Courier New', monospace;
 }
 @media (max-width: 768px) {
     .col-sm-4 h2 {
-        font-size: 18px;
+        font-size: 20px;
     }
 }
 @media (max-width: 480px) {
     .col-xs-4 h2 {
-        font-size: 14px;
+        font-size: 16px;
     }
 }
