--- a/TEK.css
+++ b/TEK.css
@@ -66,3 +66,10 @@ h2 {
     background-color: #b98b06;
     color: white;
 }
+
+.bg-image{
+    background-image: url(BackGround.jpg);
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    background-size: cover;
+}
