--- a/TEK.css
+++ b/TEK.css
@@ -73,3 +73,15 @@ h2 {
     background-attachment: fixed;
     background-size: cover;
 }
+
+.padding-nav{
+    padding-top: 111px;
+}
+.image-formatting{
+    border: 2px solid black;
+    border-radius: 15px;
+    margin-left: 20px;
+    box-sizing: border-box;
+    height: 300px;
+    width: auto;
+}
