--- a/TEK.css
+++ b/TEK.css
@@ -77,11 +77,12 @@ h2 {
 .padding-nav{
     padding-top: 181px;
     margin-left: 50px;
+    padding-right: 30px;
 }
 
 .image-formatting{
     border: 2px solid black;
-    border-radius: 15px;
+    border-radius: 25px;
     margin-left: -20px;
     box-sizing: border-box;
     height: 300px;
@@ -92,7 +93,7 @@ h2 {
     box-sizing: border-box;
 }
 .image-top{
-    margin-top: 200px;
+    margin-top: 170px;
 }
 
 .info{
@@ -108,6 +109,7 @@ h2 {
 }
 
 hr{
-    height: 2px;
+    height: 1px;
     background-color: black;
+    border: none;
 }
