--- a/TEK.css
+++ b/TEK.css
@@ -83,9 +83,13 @@ h3 {
     margin-left: 50px;
     padding-right: 30px;
 }
-
 .padding-nav-nagy{
     padding-top: 221px;
+    margin-left: 50px;
+    padding-right: 30px;
+}
+.padding-nav-kisci{
+    padding-top: 151px;
     margin-left: 50px;
     padding-right: 30px;
 }
@@ -128,7 +132,6 @@ h3 {
 .main-text{
     padding-left: 10px;
     font-size: 15px;
-    /*width: 800px;*/
 }
 .main-text a{
     color: black;
@@ -155,4 +158,19 @@ hr{
 
 .nagyob-text{
     font-size: 20px;
+}
+
+.kisseb{
+    padding-right: 200px;
+}
+
+.infoblokk-img{
+    width: 436px;
+    height: auto;
+}
+
+.kehop524-text{
+    font-weight: bold;
+    font-size: 25px;
+    width: 400px;
 }
