--- a/TEK.css
+++ b/TEK.css
@@ -28,6 +28,13 @@ h2 {
 h3 {
     font-size: 28px;
 }
+h3 a{
+    color: black;
+}
+h3 a:hover{
+    color: black;
+}
+
 .h4-nagy{
     font-size: 20px;
 }
@@ -181,4 +188,11 @@ hr{
 .kisci-img{
     width: 300px;
     height: auto;
+}
+
+.kisci-width{
+    width: 300px;
+}
+.kisci-width b{
+    margin-left: 10px;
 }
