--- a/TEK.css
+++ b/TEK.css
@@ -25,8 +25,11 @@ h2 {
     }
 }
 
-h3 {
+h3{
     font-size: 28px;
+}
+h3 ol{
+    font-family: 'Times New Roman', Times, serif;
 }
 h3 a{
     color: black;
@@ -217,4 +220,8 @@ hr{
 }
 .kisci-width b{
     margin-left: 10px;
+}
+
+.no-bullet{
+    list-style-type: none;
 }
